--- a/FEP.HTML
+++ b/FEP.HTML
@@ -30,6 +30,7 @@
         </div>
         <input type="checkbox" class="nav-toggle" id="toggler" />
         <nav class="nav-bar">
+            <div class="overlay"></div>
             <div class="nav-conatiner">
                 <ul class="nav-uls">
                     <li><a href="#">Sell</a></li>
